--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,14 @@ body {
     margin: 0;
     min-height: 100vh;
 }
+
+.app-container {
+    display: grid;
+    gap: 1.625rem;
+    grid-template-areas: 'menu feed';
+    grid-template-columns: 177px 996px;
+    grid-template-rows: 1fr;
+    height: 100vh;
+    margin: 3.5rem auto;
+    max-width: 1200px;
+}
