♻️ refactor: altera `height` para `min-height`

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ a {
     grid-template-areas: 'menu feed';
     grid-template-columns: 177px 996px;
     grid-template-rows: 1fr;
-    height: 100vh;
+    min-height: 100vh;
     margin: 3.5rem auto;
     max-width: 1200px;
 }
